--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>UdemyJSlearn</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
-    <script src="underscore.js"></script>
-<script type="text/javascript" src="app.js"></script>
-</head>
-<body>
-    Hello my friend!!!
-</body>
+<html>
+    <head>
+        
+    </head>
+    <body>
+        <div id="main" class="container">
+            <h1>People</h1>
+            <ul class="people">
+                <li>John Doe</li>
+                <li>Jane Doe</li>
+                <li>Jim Doe</li>
+            </ul>
+        </div>
+        <script src="jquery-1.11.2.js"></script>
+        <script src="app.js"></script>
+    </body>
 </html>
-
-
-
-
-
