--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 <meta charset="UTF-8">
     </head>
     <body>
-        <div id="logindiv">
-            <select id="lang">
-                <option value="en">English</option>
-                <option value="es">Spanish</option>
-            </select>
-            <input type="button" value="Login" id="login" />
-        </div>
-        <h1 id='greeting'></h1>
+
+        <div id="div1"><h2>Let jQuery AJAX Change This Text</h2></div>
+        <button>Get External Content</button>
+
         <script src="jquery-1.11.2.js"></script>
         <script src="Greetr.js"></script>
         <script src="app.js"></script>
+        <script src="math.js"></script>
     </body>
 </html>
