--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <script src="jquery-1.11.2.js"></script>
+        <script src="Themes.js"></script>
         <script src="Greetr.js"></script>
         <script src="app.js"></script>
     </body>
